--- a/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
+++ b/manifests/0000_50_olm_00-clusterserviceversions.crd.yaml
@@ -1327,7 +1327,7 @@ spec:
                                                                   - value
                                                                 properties:
                                                                   name:
-                                                                    description: The header field name
+                                                                    description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                     type: string
                                                                   value:
                                                                     description: The header field value
@@ -1392,7 +1392,7 @@ spec:
                                                                   - value
                                                                 properties:
                                                                   name:
-                                                                    description: The header field name
+                                                                    description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                     type: string
                                                                   value:
                                                                     description: The header field value
@@ -1474,7 +1474,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -1610,7 +1610,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -1821,7 +1821,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -2139,7 +2139,7 @@ spec:
                                                                   - value
                                                                 properties:
                                                                   name:
-                                                                    description: The header field name
+                                                                    description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                     type: string
                                                                   value:
                                                                     description: The header field value
@@ -2204,7 +2204,7 @@ spec:
                                                                   - value
                                                                 properties:
                                                                   name:
-                                                                    description: The header field name
+                                                                    description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                     type: string
                                                                   value:
                                                                     description: The header field value
@@ -2286,7 +2286,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -2422,7 +2422,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -2633,7 +2633,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -2962,7 +2962,7 @@ spec:
                                                                   - value
                                                                 properties:
                                                                   name:
-                                                                    description: The header field name
+                                                                    description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                     type: string
                                                                   value:
                                                                     description: The header field value
@@ -3027,7 +3027,7 @@ spec:
                                                                   - value
                                                                 properties:
                                                                   name:
-                                                                    description: The header field name
+                                                                    description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                     type: string
                                                                   value:
                                                                     description: The header field value
@@ -3109,7 +3109,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -3245,7 +3245,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
@@ -3456,7 +3456,7 @@ spec:
                                                               - value
                                                             properties:
                                                               name:
-                                                                description: The header field name
+                                                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
                                                                 type: string
                                                               value:
                                                                 description: The header field value
