--- a/microshift-manifests/0000_50_olm_15-csv-viewer.rbac.yaml
+++ b/microshift-manifests/0000_50_olm_15-csv-viewer.rbac.yaml
@@ -7,7 +7,7 @@ metadata:
     include.release.openshift.io/self-managed-high-availability: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
   name: copied-csv-viewer
-  namespace: openshift
+  namespace: openshift-operator-lifecycle-manager
 rules:
   - apiGroups:
       - "operators.coreos.com"
@@ -27,7 +27,7 @@ metadata:
     include.release.openshift.io/self-managed-high-availability: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
   name: copied-csv-viewers
-  namespace: openshift
+  namespace: openshift-operator-lifecycle-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
