--- a/staging/api/.github/workflows/go.yaml
+++ b/staging/api/.github/workflows/go.yaml
@@ -12,13 +12,13 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
-      id: go
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version-file: go.mod
+      id: go
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -40,16 +40,16 @@ jobs:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3
       with:
-        go-version: 1.19
+        fetch-depth: 0
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version-file: go.mod
       id: go
     - name: Print out Go env
       run: go env
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
     - name: Run go-apidiff
       uses: joelanford/go-apidiff@main
