--- a/staging/api/.github/workflows/verify.yml
+++ b/staging/api/.github/workflows/verify.yml
@@ -11,10 +11,10 @@ jobs:
   verify:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: '~1.19'
+          go-version-file: go.mod
       - name: Run the verify target
         run: |
           export GOPATH=$(go env GOPATH)
